--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,8 @@
   height: 400px;
   background-color: hsl(229, 57%, 11%);
   text-align: center;
-  padding: 165px 100px 0 100px;
+  padding: 480px 100px 0 200px;
+  margin-right: 0px;
 }
 
 
